--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CarWash">
-        <activity android:name=".MainActivity">
+        <activity android:name=".history"/>
+        <activity android:name=".Pending_Orders" />
+        <activity android:name=".Orders">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
