--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
         android:allowBackup="true"
@@ -14,18 +14,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CarWash">
-
-        <activity android:name=".OrderSuccess"/>
+        <activity android:name=".ForumCustomerActivity"></activity>
+        <activity android:name=".OrderSuccess" />
         <activity android:name=".ConfirmOrder" />
         <activity android:name=".SelectPackages" />
         <activity android:name=".ChooseCarWash" />
-        <activity android:name=".YourLocation"/>
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".YourLocation" />
+        <activity android:name=".MainActivity" />
+
+        <activity android:name=".ForumActivity"/>
+        <activity android:name=".PostDetailActivity"/>
+
+
         <service android:name=".FetchAddressIntentService" />
-        <activity android:name=".RegisterActivity"/>
-        <activity android:name=".CustomerActiveOrders"/>
-        <activity android:name=".CustomerPending_Orders"/>
-        <activity android:name=".customer_history"/>
+
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".CustomerActiveOrders" />
+        <activity android:name=".CustomerPending_Orders" />
+        <activity android:name=".customer_history" />
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,7 +42,6 @@
         <activity android:name=".provider_history" />
         <activity android:name=".Orders" />
         <activity android:name=".Pending_Orders" />
-
     </application>
 
 </manifest>
